# sicp-study-group

./: README.md  notes.org
chapter-1/: ex1-1.rkt
karthik-ravikanti/: onel-cond.rkt
karthik-ravikanti/agda/: ex1-13.agda
karthik-ravikanti/racket/: ex1-4.rkt  ex1-5.rkt
owayss/racket/: count-change.rkt  ex1-10.rkt  ex1-11.rkt  ex1-12.rkt  ex1-15.rkt  ex1-16.rkt  ex1-17.rkt  ex1-18.rkt  ex1-19.rkt  ex1-2.rkt  ex1-20.rkt  ex1-21.rkt  ex1-22.rkt  ex1-23.rkt  ex1-24.rkt  ex1-25.rkt  ex1-26.rkt  ex1-27.rkt  ex1-28.rkt  ex1-29.rkt  ex1-3.rkt  ex1-30.rkt  ex1-31.rkt  ex1-32.rkt  ex1-33.rkt  ex1-34.rkt  ex1-35.rkt  ex1-36.rkt  ex1-37.rkt  ex1-38.rkt  ex1-39.rkt  ex1-4.rkt  ex1-40.rkt  ex1-41.rkt  ex1-42.rkt  ex1-43.rkt  ex1-44.rkt  ex1-45.rkt  ex1-46.rkt  ex1-5.rkt  (+60 more)
plundaahl/: .gitignore
plundaahl/exercises/: ex01_01.scm  ex01_02.scm  ex01_03.scm  ex01_06.org  ex01_07_and_01_08.scm  ex01_11.scm  ex01_12.scm  ex01_14.org  ex01_15.scm  ex01_16.scm  ex01_17.scm  ex01_18.scm  ex01_21.scm  ex01_22.scm  ex01_23.scm  ex01_24.scm  ex01_29.scm  ex01_30.scm  ex01_31.scm  ex01_32.scm  ex01_33.scm  ex02_01.scm  ex02_02.scm  ex02_04.scm  ex02_17.scm  ex02_18.scm  ex02_19.scm  ex02_20.scm  ex02_21.scm  ex02_22.scm  ex02_23.scm  ex02_24.scm  ex02_25.scm  ex02_26.scm  ex02_27.scm  ex02_28.scm  ex02_29.scm  ex02_30.scm  ex02_31.scm  ex02_33.scm  (+47 more)
prsdta/: bonus.ss  chap1.org  chap2.org
rust-learn/crdt-minesweeper/: Cargo.toml
rust-learn/crdt-minesweeper/src/: lib.rs  main.rs
wulab/exercises/: exercise-1.3.scm  exercise-1.30.scm  exercise-1.31a.scm  exercise-1.31b.scm  (+20 more)
(+85 files in other folders)
