[package]
name = "crdt-minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autosurgeon = "0.3.2"
automerge = "0.3.0"
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.33", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros"] }
